--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/local/bin/python",
+    "python.pythonPath": "C:\\Program Files\\Python39\\python.exe",
     "python.linting.pylamaArgs": [
         "--ignore=E501,W503"
     ]
