--- a/data/treasures.json
+++ b/data/treasures.json
@@ -6,27 +6,71 @@
         "4": "Asafétida $5/g",
         "5": "Cardamomo $10/g",
         "6": "Cassia $8/g",
-        "7": "Pimenta Chilli $3/g - 15g em pó, espalhadas no caminho, track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h",
-        "8": "Canela $10/g - Afrodisíaco. -1 resistência Luxúria / sedução, 1h",
+        "7": [
+            "Pimenta Chilli $3/g - 15g em pó, espalhadas no caminho",
+            "track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h"
+        ],
+        "8": [
+            "Canela $10/g - Afrodisíaco. -1 resistência Luxúria / sedução",
+            "1h"
+        ],
         "9": "Cravo $10/g",
-        "10": "Coentro $10/g - Consumo 15g, +1 HT x veneno, 1h",
+        "10": [
+            "Coentro $10/g - Consumo 15g",
+            "+1 HT x veneno",
+            "1h"
+        ],
         "11": "Cominho $10/g",
-        "12": "Fungo Saboroso de Anão $5/g - 15g/dia, +1 HT recuperar PV",
+        "12": [
+            "Fungo Saboroso de Anão $5/g - 15g/dia",
+            "+1 HT recuperar PV"
+        ],
         "13": "Pimenta de Casca Élfica $3/g",
-        "14": "Semente Brilhante de Fada $18/g - 15g, -1 x controle/leitura da mente, 1h",
+        "14": [
+            "Semente Brilhante de Fada $18/g - 15g",
+            "-1 x controle/leitura da mente",
+            "1h"
+        ],
         "15": "Funcho $5/g",
         "16": "Feno-Grego $10/g",
-        "17": "Gengibre $3/g - 15g, tratamento x nausea (B428), 1h",
-        "18": "Saboroso Halfling $10/g - 15g/dia, +1 HT recuperar PV",
-        "19": "Huajiao - Pimenta Chinesa $10/g - 15g em pó, espalhadas no caminho, track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h",
+        "17": [
+            "Gengibre $3/g - 15g",
+            "tratamento x nausea (B428)",
+            "1h"
+        ],
+        "18": [
+            "Saboroso Halfling $10/g - 15g/dia",
+            "+1 HT recuperar PV"
+        ],
+        "19": [
+            "Huajiao - Pimenta Chinesa $10/g - 15g em pó",
+            "espalhadas no caminho",
+            "track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h"
+        ],
         "20": "Macis $15/g",
         "21": "Mostarda $3/g",
-        "22": "Nigella $5/g - 15g/, +1 resistir Fúria/Sanguinolência, 1h",
+        "22": [
+            "Nigella $5/g - 15g/",
+            "+1 resistir Fúria/Sanguinolência",
+            "1h"
+        ],
         "23": "Noz-moscada $10/g",
         "24": "Semente de Cebola $3/g",
-        "25": "Grão de Fogo Orc $10/g - 15g, +1 HT x venenos que causam inconsciência/dano por fadiga, 1h",
-        "26": "Pimenta Preta $10/g - 15g em pó, espalhadas no caminho, track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h",
-        "27": "Pimenta Branca $13/g - 15g em pó, espalhadas no caminho, track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h",
+        "25": [
+            "Grão de Fogo Orc $10/g - 15g",
+            "+1 HT x venenos que causam inconsciência/dano por fadiga",
+            "1h"
+        ],
+        "26": [
+            "Pimenta Preta $10/g - 15g em pó",
+            "espalhadas no caminho",
+            "track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h"
+        ],
+        "27": [
+            "Pimenta Branca $13/g - 15g em pó",
+            "espalhadas no caminho",
+            "track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h"
+        ],
         "28": "Semente de Papoula $3/g",
         "29": "Açafrão $20/g",
         "30": "Sal $1/g",
@@ -34,7 +78,11 @@
         "32": "Sal Vermelho $3/g",
         "33": "Sumagre $3/g",
         "34": "Tamarindo $1/g",
-        "35": "Cúrcuma $3/g, antisséptico, +1 em Primeiros Socorros",
+        "35": [
+            "Cúrcuma $3/g",
+            "antisséptico",
+            "+1 em Primeiros Socorros"
+        ],
         "36": "Zedoária $10/g"
     },
     "Quantidade": {
@@ -44,42 +92,58 @@
         "4": "30g",
         "5": "38g",
         "6": "45g"
-    },    
+    },
     "Multiplicar de Quantidade": {
         "1-6": "x1",
         "7-9": "x2",
         "10-12": "x3"
     },
     "Vasilhame": {
-        "1": "Frasco de Cristal (250mL), RD 1, PV 1, $5, 0,125Kg",
-        "2": "Garrafa Pequena (500mL), RD 1, PV 2, $2, 0,250kg",
-        "3": "Garrafa (1L), RD 1, PV 4, $3, 0,5Kg",
-        "4": "Caixa de Pedra Pequena, RD 4, PV 7, $50, 3Kg",
-        "5": "Caixa de Madeira Pequena, RD 1, PV 2, $2, 0,125Kg",
-        "6": "Frasco de Ferro (250mL), RD 3, PV 3, $15, 0,250Kg"
+        "1": [
+            "Frasco de Cristal (250mL)",
+            "RD 1",
+            "PV 1",
+            "$5",
+            "0,125Kg"
+        ],
+        "2": [
+            "Garrafa Pequena (500mL)",
+            "RD 1",
+            "PV 2",
+            "$2",
+            "0,250kg"
+        ],
+        "3": [
+            "Garrafa (1L)",
+            "RD 1",
+            "PV 4",
+            "$3",
+            "0,5Kg"
+        ],
+        "4": [
+            "Caixa de Pedra Pequena",
+            "RD 4",
+            "PV 7",
+            "$50",
+            "3Kg"
+        ],
+        "5": [
+            "Caixa de Madeira Pequena",
+            "RD 1",
+            "PV 2",
+            "$2",
+            "0,125Kg"
+        ],
+        "6": [
+            "Frasco de Ferro (250mL)",
+            "RD 3",
+            "PV 3",
+            "$15",
+            "0,250Kg"
+        ]
     },
     "Embelezamento": {
         "1-9": "Não",
-        "10-12": {
-            "1": "Forrado, +1FC, RD+4 x contusão/colisão",
-            "2": "Boa Qualidade, +2FC, teca, ébano, marfim para madeira, vidro colorido para cerâmica, coberto de prata para metal",
-            "3": "Material Excepcional, +19FC, osso de dragão para madeira, porcelana para cerâmica, camada de ouro para metal.",
-            "4": "Franja Barata, +0,25FC, penas/pêlos animais comuns, cordas de cor sem graça",
-            "5": "Franja Cara, +0,5FC, penas/pêlos caros, tachas com cores brilhantes.",
-            "6": "Contas/Pregos, Mínimo, +0,75FC, contas de metal",
-            "7": "Contas/Pregos, Extenso, +2FC, cobre a maior parte do item",
-            "8": "Marcação em Ferro, +1FC, padrão queimado no item, se metal como Contas/Pregos, Mínimo",
-            "9": "Pintura/Esmalte, Mínimo, +2FC, um pequeno desenho pintado, se metal esmalte cozido nele",
-            "10": "Pintura/Esmalte, Extenso, +5FC, cobre a maior parte do item",
-            "11": "Relevo, Mínimo, +1,5FC, pequeno desenho escavado, impresso ou estampado na superfície do item",
-            "12": "Relevo, Extenso, +4FC, cobre a maior parte do item",
-            "13": "Mosaico, Barato, Mínimo, +2,5FC, Como relevo, mas com materiais coloridos diferentes como madeira preta em madeira branca",
-            "14": "Mosaico, Barato, Extenso, +7FC, cobre a maior parte do item",
-            "15": "Mosaico, Caro, Mínimo, +6FC, como ébano em madeira, pérolas ou pedras semipreciosas",
-            "16": "Mosaico, Caro, Extenso, +14FC, cobre a maior parte do item",
-            "17": "Revestimento de Prata, +2FC, uma fina camada de prata",
-            "18": "Douramento, +19FC, uma fina camada de ouro",
-            "19": "Joalheira, varia, tem 1d/3 pedras preciosas encrustadas"
-        }
-    } 
+        "10-12": "embelezamento.json"
+    }
 }
