--- a/data/treasures.json
+++ b/data/treasures.json
@@ -11,7 +11,8 @@
                 "6": "Cassia $8/g",
                 "7": [
                     "Pimenta Chilli $3/g - 15g em pó, espalhadas no caminho",
-                    "track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h"
+                    "track por olfato = sneezing (B428)",
+                    "Após, tracker HT-3 ou parar tracking por 1h"
                 ],
                 "8": [
                     "Canela $10/g - Afrodisíaco. -1 resistência Luxúria / sedução",
@@ -48,7 +49,8 @@
                 "19": [
                     "Huajiao - Pimenta Chinesa $10/g - 15g em pó",
                     "espalhadas no caminho",
-                    "track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h"
+                    "track por olfato = sneezing (B428)",
+                    "Após, tracker HT-3 ou parar tracking por 1h"
                 ],
                 "20": "Macis $15/g",
                 "21": "Mostarda $3/g",
@@ -67,12 +69,14 @@
                 "26": [
                     "Pimenta Preta $10/g - 15g em pó",
                     "espalhadas no caminho",
-                    "track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h"
+                    "track por olfato = sneezing (B428)",
+                    "Após, tracker HT-3 ou parar tracking por 1h"
                 ],
                 "27": [
                     "Pimenta Branca $13/g - 15g em pó",
                     "espalhadas no caminho",
-                    "track por olfato = sneezing (B428). Após, tracker HT-3 ou parar tracking por 1h"
+                    "track por olfato = sneezing (B428)",
+                    "Após, tracker HT-3 ou parar tracking por 1h"
                 ],
                 "28": "Semente de Papoula $3/g",
                 "29": "Açafrão $20/g",
