erro de dois scripts sendo chamados na mesma rolagem de dados

--- a/data/treasures.json
+++ b/data/treasures.json
@@ -151,10 +151,10 @@
             },
             "Embelezamento": {
                 "1-9": "Não",
-                "10-12": "embelezamento_duro.json"
-            },
-            "Motivo Decorativo": {
-                "1": "motivo_decorativo.json"
+                "10-12": {
+                    "Value": "embelezamento_duro.json",
+                    "Motivo Decorativo": "motivo_decorativo.json"
+                }
             }
         }
     }
